--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,13 @@ clap = { version = "4.5.36", features = ["derive"] }
 dirs = "6.0.0"
 env_logger = "0.11.8"
 feed-rs = "2.3.1"
+futures = "0.3.31"
 http = "1.3.1"
 log = "0.4.27"
 lz4_flex = "0.11.3"
 postcard = { version = "1.1.1", features = ["use-std"] }
+reqwest = { version = "0.12.24", features = ["gzip", "zstd"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tera = "1.20.0"
+tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt"] }
 toml = "0.8.20"
-ureq = "3.0.11"
