--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ futures = "0.3.31"
 http = "1.3.1"
 log = "0.4.27"
 lz4_flex = "0.11.3"
+papaya = "0.2.3"
 postcard = { version = "1.1.1", features = ["use-std"] }
 reqwest = { version = "0.12.24", features = ["gzip", "zstd"] }
 serde = { version = "1.0.219", features = ["derive"] }
